--- a/index.html
+++ b/index.html
@@ -4,57 +4,59 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meus objetivos do ano</title> objtivos do ano <span>_</span></h2>
+    <title>Meus objetivos do ano</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+ <section class="conteudo-principal">
+    <h2 class="titulo-principal">Meus objetivos do ano <span>_</span> </h2>
+    <div class="conteudo">
     <div class="botoes">
-    <button class="botao ativo">estudar curso no alura</button>
-    <button class="botao">Criar projeto em JavaScript</button>
-    <button class="botao">Criar um portifolie</button>
-    <button class="botao">Atualizar meu currículo</button>
+        <button class="botao ativo">Estudar cursos na alura</button>
+        <button class="botao">Criar projetos em javaScript</button>
+        <button class="botao">criar um portfolio</button>
+        <button class="botao">atualizar meu currículo</button>
+
+        
     </div>
 
 <div class="abas-texto">
-    <div class="aba-conteudo">
-        <h3 class="aba-conteudo-texto-principal">Estudar 4 curso no alura</h3>
-        <h4 class="aba-conteudo-texto-secundario">tempo para complentar o objetivo</h4>
-    </div>
-
-    <div class="aba-conteudo">
-        <h3 class="aba-conteudo-texto-principal">Criar 5projetos no JavaScript</h3>
-        <h4 class="aba-conteudo-texto-secundario">tempo para complentar o objetivo</h4>
-    </div>
-
-    <div class="aba-conteudo">
-        <h3 class="aba-conteudo-texto-principal">Criar um portifolio com os meus 2 melhore projetos</h3>
-        <h4 class="aba-conteudo-texto-secundario">tempo para complentar o objetivo</h4>
-    </div>
-
-    <div class="aba-conteudo">
-        <h3 class="aba-conteudo-texto-principal">Atualizar os meus certificado</h3>
-        <h4 class="aba-conteudo-texto-secundario">tempo para complentar o objetivo</h4>
-    </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+    <div class="aba-conteudo ativo">
+        <h3 class="aba-conteudo-texto-pincipal">Estudar 5 cursos na alura</h3>
+        <h4 class="aba-conteudo-texto-secundario">Tempo para completar o objetio</h4>
+       <div>
+        <div class="aba-conteudo">
+            <h3 class="aba-conteudo-texto-pincipal">Estudar 5 cursos no javaScript</h3>
+            <h4 class="aba-conteudo-texto-secundario">Tempo para completar o objetio</h4>
+           <div>
+            <div class="aba-conteudo">
+                <h3 class="aba-conteudo-texto-pincipal">Criar um portiofólio com os meus 2 melhores projetos</h3>
+                <h4 class="aba-conteudo-texto-secundario">Tempo para completar o objetio</h4>
+               <div>
+                <div class="aba-conteudo">
+                    <h3 class="aba-conteudo-texto-pincipal">atualizar os meus certificados</h3>
+                    <h4 class="aba-conteudo-texto-secundario">Tempo para completar o objetio</h4>
+                   <div>
 
 </div>
-
-
-
-
-
-</section>
-<script src="main.js"></script>   
+</div>
+ </section>
+<script src="main.js"></script>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
