--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <h4 class="aba-conteudo-texto-secundario">tempo para completar os objetivos</h4>
             <div class="contador">
                 <div class="contador-digito">
-                    <p class="contador-digito-numero" id="dia2">7</p>
+                    <p class="contador-digito-numero" id="dias2">7</p>
                     <p class="contador-digito-titulo">dias</p> 
                 </div>
                     <div class="contador-digito">
